Created section team, styled some part of section and made some changes in section aboutus

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<!-- </nav> -->
 		</nav>
 		<nav class="nav-desktop">
-			<a class="nav-brand nav__link-desktop" href="#trainings">Bonzai MMA</a>
+			<a class="nav-brand nav__link-desktop" href="#">Bonzai MMA</a>
 			<a class="nav__link-desktop" href="#news">aktualności</a>
 			<a class="nav__link-desktop" href="#aboutus">o nas</a>
 			<a class="nav__link-desktop" href="#trainings">zajęcia</a>
@@ -281,6 +281,7 @@
 						</div>
 						
 					</div>
+					<hr>
 					<div class="trainings__plan" id="plan">
 						<h3 class="trainings-title">Grafik</h3>
 						<img src="src/img/grafik.jpg" alt="">
@@ -288,6 +289,39 @@
 							Nie wiesz od czego zacząć?
 							<a href="#contact">Skontaktuj się z trenerem!</a>
 						</p>
+					</div>
+				</div>
+			</section>
+			<section class="team section-padding section" id="team">
+				<div class="shadow"></div>
+				<h2 class="section-title">Kadra</h2>
+				<div class="underline"></div>
+				<div class="wrapper">
+					<div class="team__cards">
+						<div class="team__card one">
+							<button class="question-btn"><i class="far fa-question-circle"></i></button>
+							<div class="team__card-text">
+							<h1 class="card-title-name">Michał Pogorzelski</h1>
+							<h2 class="card-title-training">Trener MMA</h2>
+							<p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam maxime, mollitia ex laudantium quos ad suscipit nesciunt perferendis sint, excepturi officiis quasi quo ullam non fugiat enim voluptatibus corrupti est?</p>
+							</div>
+						</div>
+						<div class="team__card two">
+							<button class="question-btn"><i class="far fa-question-circle"></i></button>
+							<div class="team__card-text">
+							<h1 class="card-title-name">Mateusz Dubiłowicz</h1>
+							<h2 class="card-title-training">Trener MMA</h2>
+							<p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam maxime, mollitia ex laudantium quos ad suscipit nesciunt perferendis sint, excepturi officiis quasi quo ullam non fugiat enim voluptatibus corrupti est?</p>
+							</div>
+						</div>
+						<div class="team__card three">
+							<button class="question-btn"><i class="far fa-question-circle"></i></button>
+							<div class="team__card-text">
+							<h1 class="card-title-name">Jakub Janiak</h1>
+							<h2 class="card-title-training">Trener BJJ</h2>
+							<p class="card-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam maxime, mollitia ex laudantium quos ad suscipit nesciunt perferendis sint, excepturi officiis quasi quo ullam non fugiat enim voluptatibus corrupti est?</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
