--- a/index.html
+++ b/index.html
@@ -326,6 +326,39 @@
 				</div>
 			</section>
 
+			<section class="gallery white-section section" id="gallery">
+				<h2 class="section-title">Galeria</h2>
+				<div class="underline"></div>
+				<div class="wrapper">
+					<div class="gallery-boxes">
+						<div class="gallery-box"><span><img src="../src/img/IMG_5690.JPG" alt=""></span></div>
+						<div class="gallery-box"><span><img src="../src/img/IMG_5690.JPG" alt=""></span></div>
+						<div class="gallery-box"><span><img src="../src/img/IMG_5690.JPG" alt=""></span></div>
+						<div class="gallery-box"><span><img src="../src/img/IMG_5690.JPG" alt=""></span></div>
+						<div class="gallery-box"><span><img src="../src/img/IMG_5690.JPG" alt=""></span></div>
+						<div class="gallery-box"><span><img src="../src/img/IMG_5690.JPG" alt=""></span></div>
+					</div>
+				</div>
+				<div class="preview-box">
+					<div class="details">
+						<span class="title">
+						Zdjęcie	<p class="current-img">3</p>
+						z	<p class="total-img">6</p>
+						</span>
+						<span class="icon fas fa-times"></span>
+					</div>
+					<div class="img-box">
+						<div class="slide prev">
+							<i class="fas fa-angle-left"></i>
+						</div>
+						<div class="slide next">
+							<i class="fas fa-angle-right"></i>
+						</div>
+						<img src="./src/img/IMG_5690.JPG" alt="">
+					</div>
+				</div>
+			</section>
+
 			<section class="contact section-padding section" id="contact">
 				<div class="shadow"></div>
 				<h2 class="section-title">Kontakt</h2>
