Edited section gallery, added some changes

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 						<div class="slide next">
 							<i class="fas fa-angle-right"></i>
 						</div>
-						<img src="./src/img/IMG_5690.JPG" alt="">
+						<img src="" alt="">
 					</div>
 				</div>
 			</section>
