--- a/index.html
+++ b/index.html
@@ -331,19 +331,19 @@
 				<div class="underline"></div>
 				<div class="wrapper">
 					<div class="gallery-boxes">
+						<div class="gallery-box"><span><img src="../src/img/IMG_5688.JPG" alt=""></span></div>
 						<div class="gallery-box"><span><img src="../src/img/IMG_5690.JPG" alt=""></span></div>
 						<div class="gallery-box"><span><img src="../src/img/IMG_5690.JPG" alt=""></span></div>
+						<div class="gallery-box"><span><img src="../src/img/IMG_5691.JPG" alt=""></span></div>
 						<div class="gallery-box"><span><img src="../src/img/IMG_5690.JPG" alt=""></span></div>
-						<div class="gallery-box"><span><img src="../src/img/IMG_5690.JPG" alt=""></span></div>
-						<div class="gallery-box"><span><img src="../src/img/IMG_5690.JPG" alt=""></span></div>
-						<div class="gallery-box"><span><img src="../src/img/IMG_5690.JPG" alt=""></span></div>
+						<div class="gallery-box"><span><img src="../src/img/IMG_5813.JPG" alt=""></span></div>
 					</div>
 				</div>
 				<div class="preview-box">
 					<div class="details">
 						<span class="title">
-						Zdjęcie	<p class="current-img">3</p>
-						z	<p class="total-img">6</p>
+						Zdjęcie	<p class="current-img"></p>
+						z	<p class="total-img"></p>
 						</span>
 						<span class="icon fas fa-times"></span>
 					</div>
@@ -357,6 +357,7 @@
 						<img src="" alt="">
 					</div>
 				</div>
+				<div class="gallery-shadow"></div>
 			</section>
 
 			<section class="contact section-padding section" id="contact">
