Edited cards in section news, not finished yet

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+			rel="stylesheet"
+		/>
 		<script
 			src="https://kit.fontawesome.com/d5419b392a.js"
 			crossorigin="anonymous"
@@ -77,89 +83,119 @@
 				<h2 class="section-title">Aktualności</h2>
 				<div class="underline"></div>
 				<div class="wrapper">
-					<div class="news__box">
-						<div class="news__option">
-							<img
-								src="src/img/IMG_5690.JPG"
-								alt="Zdjęcie po walce na KSW 71."
-								class="news__option-img"
-							/>
-							<div class="news__option-info">
-								<p class="news__option-date">17.02.2024 r.</p>
-								<h3 class="news__option-title">
-									Wygrana walka Wióra na KSW 71 we Wrocławiu!
-								</h3>
-								<button class="news__option-btn btn-special-animation">
-									więcej..
-								</button>
+					<div class="news__cards">
+						<div class="news__card">
+							<div class="news__card-img">
+								<img src="../src/img/IMG_5690.JPG" alt="" />
 							</div>
-						</div>
-						<!-- <div class="panel__option-one">
-							<div class="news__option">
-								<img
-									src="./img/IMG_5690.JPG"
-									alt="Zdjęcie po walce na KSW 71."
-									class="news__option-img"
-								/>
-								<div class="news__option-info">
-									<h3 class="news__option-title">Gala KSW 71 za nami!</h3>
-									<p class="news__option-text">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-										Voluptatum similique ipsum quia natus labore suscipit
-										laudantium nostrum aliquam tempore perspiciatis?
+							<div class="news__card-text">
+								<h3 class="card-title">Świetna walka Wióra na KSW 71!</h3>
+								<p class="card-date">17.02.2024 r.</p>
+								<div class="card-bottom">
+									<p class="card-bottom-text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										Itaque beatae hic deleniti? Maxime, dicta cumque delectus
+										quas praesentium iure rem.
 									</p>
-									<p class="news__option-text">
-										Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									</p>
+									<div class="card-bottom-btn">
+										<a href="">Więcej..</a>
+									</div>
 								</div>
 							</div>
-						</div> -->
-						<div class="news__option">
-							<img
-								src="src/img/IMG_5691.JPG"
-								alt="Zdjęcie po walce na High League 2."
-								class="news__option-img news__option-img--right"
-							/>
-							<div class="news__option-info">
-								<p class="news__option-date">17.02.2024 r.</p>
-								<h3 class="news__option-title">
-									Świetny występ naszego zawodnika na HIGH LEAGUE 2.
-								</h3>
-								<button class="news__option-btn btn-special-animation">
-									więcej..
-								</button>
+						</div>
+						<div class="news__card">
+							<div class="news__card-img">
+								<img src="../src/img/IMG_5690.JPG" alt="" />
+							</div>
+							<div class="news__card-text">
+								<h3 class="card-title">Świetna walka Wióra na KSW 71!</h3>
+								<p class="card-date">17.02.2024 r.</p>
+								<div class="card-bottom">
+									<p class="card-bottom-text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										Itaque beatae hic deleniti? Maxime, dicta cumque delectus
+										quas praesentium iure rem.
+									</p>
+									<div class="card-bottom-btn">
+										<a href="">Więcej..</a>
+									</div>
+								</div>
 							</div>
 						</div>
-						<div class="news__option">
-							<img
-								src="src/img/4contra_wroclaw.jpg"
-								alt="Zdjęcie po treningu grypu MMA PRO."
-								class="news__option-img"
-							/>
-							<div class="news__option-info">
-								<p class="news__option-date">17.02.2024 r.</p>
-								<h3 class="news__option-title">
-									Gala Contra MMA 4 obfitowała w świetne pojedynki!
-								</h3>
-								<button class="news__option-btn btn-special-animation">
-									więcej..
-								</button>
+						<div class="news__card">
+							<div class="news__card-img">
+								<img src="../src/img/IMG_5690.JPG" alt="" />
+							</div>
+							<div class="news__card-text">
+								<h3 class="card-title">Świetna walka Wióra na KSW 71!</h3>
+								<p class="card-date">17.02.2024 r.</p>
+								<div class="card-bottom">
+									<p class="card-bottom-text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										Itaque beatae hic deleniti? Maxime, dicta cumque delectus
+										quas praesentium iure rem.
+									</p>
+									<div class="card-bottom-btn">
+										<a href="">Więcej..</a>
+									</div>
+								</div>
 							</div>
 						</div>
-						<div class="news__option">
-							<img
-								src="src/img/IMG_5688.JPG"
-								alt="Zdjęcie po treningu grypu MMA PRO."
-								class="news__option-img news__option-img--right"
-							/>
-							<div class="news__option-info">
-								<p class="news__option-date">17.02.2024 r.</p>
-								<h3 class="news__option-title">
-									Walka naszego trenera na gali FIGHT EMPIRE 2!
-								</h3>
-								<button class="news__option-btn btn-special-animation">
-									więcej..
-								</button>
+						<div class="news__card">
+							<div class="news__card-img">
+								<img src="../src/img/IMG_5690.JPG" alt="" />
+							</div>
+							<div class="news__card-text">
+								<h3 class="card-title">Świetna walka Wióra na KSW 71!</h3>
+								<p class="card-date">17.02.2024 r.</p>
+								<div class="card-bottom">
+									<p class="card-bottom-text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										Itaque beatae hic deleniti? Maxime, dicta cumque delectus
+										quas praesentium iure rem.
+									</p>
+									<div class="card-bottom-btn">
+										<a href="">Więcej..</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="news__card">
+							<div class="news__card-img">
+								<img src="../src/img/IMG_5690.JPG" alt="" />
+							</div>
+							<div class="news__card-text">
+								<h3 class="card-title">Świetna walka Wióra na KSW 71!</h3>
+								<p class="card-date">17.02.2024 r.</p>
+								<div class="card-bottom">
+									<p class="card-bottom-text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										Itaque beatae hic deleniti? Maxime, dicta cumque delectus
+										quas praesentium iure rem.
+									</p>
+									<div class="card-bottom-btn">
+										<a href="">Więcej..</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="news__card">
+							<div class="news__card-img">
+								<img src="../src/img/IMG_5690.JPG" alt="" />
+							</div>
+							<div class="news__card-text">
+								<h3 class="card-title">Świetna walka Wióra na KSW 71!</h3>
+								<p class="card-date">17.02.2024 r.</p>
+								<div class="card-bottom">
+									<p class="card-bottom-text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										Itaque beatae hic deleniti? Maxime, dicta cumque delectus
+										quas praesentium iure rem.
+									</p>
+									<div class="card-bottom-btn">
+										<a href="">Więcej..</a>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -268,7 +304,9 @@
 					</div>
 					<hr />
 					<div class="trainings__bottom">
-						<h3 class="trainings-title">Jakie zajęcia odbywają się w naszym klubie?</h3>
+						<h3 class="trainings-title">
+							Jakie zajęcia odbywają się w naszym klubie?
+						</h3>
 						<div class="trainings__box">
 							<div class="trainings__box-image">
 								<img
