Edited section news and added subpages

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 										quas praesentium iure rem.
 									</p>
 									<div class="card-bottom-btn">
-										<a href="">Więcej..</a>
+										<a href="../news.html">Więcej..</a>
 									</div>
 								</div>
 							</div>
@@ -211,21 +211,10 @@
 					<div class="aboutus__text-top">
 						<h3 class="aboutus__text-top-title">O klubie</h3>
 						<p class="aboutus__text-top--one">
-							W naszym klubie dążymy do stworzenia jak najlepszych warunków do
-							trenowania przy udziale wykwalifikowanej i doświadczonej kadry
-							trenerskiej. Zapraszamy na treningi osoby w każdym stopniu
-							zaawansowania. Lorem, ipsum dolor sit amet consectetur adipisicing
-							elit.
+							W naszym klubie nie tylko doskonalisz swoje umiejętności walki, ale także zdobywasz nowych przyjaciół i doświadczasz niezwykłej atmosfery współpracy i wsparcia. Bez względu na Twój poziom zaawansowania czy wiek, mamy coś dla Ciebie. Nasze zajęcia są prowadzone przez doświadczonych trenerów, którzy nie tylko pomogą Ci opanować techniki walki, ale także będą Cię motywować do osiągnięcia najlepszych wyników.
 						</p>
 						<p class="aboutus__text-top--two">
-							Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
-							amet molestias cumque quidem odio porro consequuntur illo magni,
-							voluptatum ipsum nostrum est mollitia ut? Reprehenderit obcaecati
-							sit harum nesciunt exercitationem explicabo dicta omnis quasi
-							recusandae pariatur quibusdam placeat, nisi neque consequatur
-							dolor eligendi ab, sunt laudantium aliquid accusamus. Quas,
-							perspiciatis voluptatum vitae corporis explicabo sit neque
-							perferendis debitis doloribus voluptatem!
+							Nie czekaj dłużej! Już dzis dołącz do naszego klubu i zacznij swoją własną przygodę, która przyniesie Ci nie tylko umiejętności walki, ale także nowych przyjaciół i niezapomniane doświadczenia. Zapewniamy Ci, że będzie to decyzja, której nie będziesz żałować!
 						</p>
 						<!-- <p class="aboutus__text-top--three">
 							Nie wiesz od czego zacząć?
@@ -320,10 +309,14 @@
 									MMA - Mieszane sztuki walki
 								</h4>
 								<p class="trainings__box-description">
-									Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Beatae exercitationem enim amet deleniti. Cumque ab reiciendis
-									iure optio odit facilis maiores nesciunt voluptates amet
-									nihil. Nemo alias quis atque voluptates!
+									MMA (Mixed Martial Arts) to dyscyplina sportowa, która łączy
+									różne techniki i style walki z wielu różnych sztuk walki,
+									takich jak boks, muay thai, brazylijskie jiu-jitsu, zapasy,
+									judo, karate i wiele innych. Celem jest stworzenie najbardziej
+									wszechstronnych zawodników, którzy są w stanie rywalizować
+									zarówno w stójce, jak i w parterze. Walki MMA odbywają się w
+									oktagonie, który jest zamkniętym obszarem walki, często
+									otoczonym siatką.
 								</p>
 							</div>
 						</div>
@@ -340,10 +333,13 @@
 									BJJ - Brazylijskie jiu-jitsu
 								</h4>
 								<p class="trainings__box-description">
-									Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Beatae exercitationem enim amet deleniti. Cumque ab reiciendis
-									iure optio odit facilis maiores nesciunt voluptates amet
-									nihil. Nemo alias quis atque voluptates!
+									BJJ (Brazylijskie Jiu-Jitsu) to sztuka walki koncentrująca się
+									na walce w parterze, której celem jest kontrolowanie
+									przeciwnika i zmuszenie go do poddania się za pomocą dźwigni
+									na stawy i technik duszenia. Brazylijskie Jiu-Jitsu wywodzi
+									się z tradycyjnego japońskiego jiu-jitsu i judo, a zostało
+									rozwinięte i spopularyzowane w Brazylii przez rodzinę Gracie w
+									pierwszej połowie XX wieku.
 								</p>
 							</div>
 						</div>
@@ -358,10 +354,14 @@
 							<div class="trainings__box-text">
 								<h4 class="trainings__box-title">Zapasy</h4>
 								<p class="trainings__box-description">
-									Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Beatae exercitationem enim amet deleniti. Cumque ab reiciendis
-									iure optio odit facilis maiores nesciunt voluptates amet
-									nihil. Nemo alias quis atque voluptates!
+									Zapasy to sport walki, w którym dwóch zawodników stara się
+									zdobyć przewagę nad przeciwnikiem poprzez zastosowanie różnych
+									technik chwytów, rzutów i trzymania. Celem zapasów jest
+									kontrolowanie i pokonanie przeciwnika poprzez przyłożenie jego
+									pleców do maty lub zdobycie większej liczby punktów za różne
+									techniki i akcje wykonane podczas walki. Istnieje kilka stylów
+									zapasów, z których najpopularniejsze to zapasy klasyczne i
+									zapasy wolne.
 								</p>
 							</div>
 						</div>
@@ -376,10 +376,13 @@
 							<div class="trainings__box-text trainings__box-text--right">
 								<h4 class="trainings__box-title">Muay Thai</h4>
 								<p class="trainings__box-description">
-									Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Beatae exercitationem enim amet deleniti. Cumque ab reiciendis
-									iure optio odit facilis maiores nesciunt voluptates amet
-									nihil. Nemo alias quis atque voluptates!
+									Muay Thai, znane również jako tajski boks, to tradycyjna
+									sztuka walki i sport pochodzący z Tajlandii. Jest to formą
+									kickboxingu charakteryzującą się intensywnym użyciem ciosów
+									pięściami, łokciami, kolanami i nogami. Techniki Muay Thai są
+									często skoordynowane z klinczem i rzutami, co czyni tę
+									dyscyplinę niezwykle wszechstronną i efektywną w walce na
+									krótkim dystansie.
 								</p>
 							</div>
 						</div>
@@ -390,10 +393,13 @@
 							<div class="trainings__box-text">
 								<h4 class="trainings__box-title">Przygotowanie motoryczne</h4>
 								<p class="trainings__box-description">
-									Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Beatae exercitationem enim amet deleniti. Cumque ab reiciendis
-									iure optio odit facilis maiores nesciunt voluptates amet
-									nihil. Nemo alias quis atque voluptates!
+									Przygotowanie motoryczne to proces treningowy, którego celem
+									jest rozwój ogólnej sprawności fizycznej, takiej jak siła,
+									wytrzymałość, gibkość, szybkość, zwinność i koordynacja
+									ruchowa. Skupia się ono na doskonaleniu fundamentalnych
+									zdolności ruchowych, które są podstawą dla specyficznych
+									umiejętności w różnych dyscyplinach sportowych lub codziennym
+									życiu.
 								</p>
 							</div>
 						</div>
@@ -408,7 +414,7 @@
 								<h4 class="card-title">Poniedziałek</h4>
 								<ul class="card-list">
 									<li>
-										<p class="hour">7:00</p>
+										<p class="hour"> 7:00</p>
 										<p class="training-name">BJJ</p>
 									</li>
 									<li>
@@ -433,8 +439,8 @@
 								<h4 class="card-title">Wtorek</h4>
 								<ul class="card-list">
 									<li>
+										<p class="hour"> 7:00</p>
 										<p class="hour">---</p>
-										<p class="training-name">---</p>
 									</li>
 									<li>
 										<p class="hour">10:00</p>
@@ -458,7 +464,7 @@
 								<h4 class="card-title">Środa</h4>
 								<ul class="card-list">
 									<li>
-										<p class="hour">7:00</p>
+										<p class="hour"> 7:00</p>
 										<p class="training-name">BJJ</p>
 									</li>
 									<li>
@@ -483,8 +489,8 @@
 								<h4 class="card-title">Czwartek</h4>
 								<ul class="card-list">
 									<li>
+										<p class="hour"> 7:00</p>
 										<p class="hour">---</p>
-										<p class="training-name">---</p>
 									</li>
 									<li>
 										<p class="hour">10:00</p>
@@ -508,7 +514,7 @@
 								<h4 class="card-title">Piątek</h4>
 								<ul class="card-list">
 									<li>
-										<p class="hour">7:00</p>
+										<p class="hour"> 7:00</p>
 										<p class="training-name">BJJ</p>
 									</li>
 									<li>
@@ -524,8 +530,8 @@
 										<p class="training-name">ZAPASY</p>
 									</li>
 									<li>
+										<p class="hour">19:30</p>
 										<p class="hour">---</p>
-										<p class="training-name">---</p>
 									</li>
 								</ul>
 							</div>
@@ -533,8 +539,8 @@
 								<h4 class="card-title">Sobota</h4>
 								<ul class="card-list">
 									<li>
+										<p class="hour"> 7:00</p>
 										<p class="hour">---</p>
-										<p class="training-name">---</p>
 									</li>
 									<li>
 										<p class="hour">11:00</p>
@@ -545,12 +551,12 @@
 										<p class="training-name">MUAY THAI</p>
 									</li>
 									<li>
+										<p class="hour">18:00</p>
 										<p class="hour">---</p>
-										<p class="training-name">---</p>
 									</li>
 									<li>
+										<p class="hour">19:30</p>
 										<p class="hour">---</p>
-										<p class="training-name">---</p>
 									</li>
 								</ul>
 							</div>
